--- a/css/main.css
+++ b/css/main.css
@@ -1029,7 +1029,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
+	text-align: justify;
 	margin-bottom: 3.6rem;
 	position: relative;
 }
