--- a/css/main.css
+++ b/css/main.css
@@ -1518,7 +1518,7 @@ header .logo a {
 
 .about-content {
 	position: relative;
-	text-align: left;
+	text-align: center;
 	max-width: 850px;
 	margin-bottom: 3.6rem;
 }
