--- a/css/main.css
+++ b/css/main.css
@@ -1340,7 +1340,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #cc005f;
+	color: #FF0077;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -2581,7 +2581,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #cc005f;
+	background: #FF0077;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
