Changed the text alignment of about

--- a/css/main.css
+++ b/css/main.css
@@ -1520,7 +1520,7 @@ header .logo a {
 
 .about-content {
 	position: relative;
-	text-align: center;
+	text-align: left;
 	max-width: 850px;
 	margin-bottom: 3.6rem;
 }
